--- a/web/templates/sign-in.html
+++ b/web/templates/sign-in.html
@@ -4,7 +4,7 @@
 {{end}}
 
 {{define "content"}}
-<div class="page container bg-stone-50 md:px-8 mx-auto p-4 overflow-x-hidden overflow-y-auto">
+<div class="page bg-stone-50 md:px-8 mx-auto p-4 overflow-x-hidden overflow-y-auto">
     <h1 class="text-xl font-semibold text-primary-800 pt-12 mb-6">Iniciar Sesión</h1>
     <form
         class="max-w-sm space-y-2"
