--- a/web/templates/blocks.html
+++ b/web/templates/blocks.html
@@ -1,5 +1,5 @@
 {{define "success-card"}}
-<div class="fixed inset-0 h-screen w-screen bg-stone-900 bg-opacity-40 flex z-50" data-confirm-modal="success" data-confirm-modal-code="{{.ErrorCode}}" x-data="{}" x-ref="confirmModal">
+<div class="fixed inset-0 h-screen w-screen bg-stone-900 bg-opacity-40 flex z-50" data-confirm-modal="success" x-data="{}" x-ref="confirmModal">
     <div class="w-4/5 max-w-screen-md bg-stone-100 rounded p-2 shadow shadow-stone-300 m-auto space-y-3" data-confirm-modal-card="">
         <div class="h-32 w-32 mx-auto">
             <svg class="w-full h-full fill-emerald-500">
@@ -69,7 +69,7 @@
                 tl.to('[data-confirm-modal]', { opacity: 0 })
                 tl.to('[data-confirm-modal-card]', { scale: 0 }, '<')
                 tl.to('[data-confirm-modal]', { visibility: 'hidden' })
-                tl.delayedCall(.3, function() {
+                gsap.delayedCall(.3, function() {
                     document.body.dispatchEvent(confirmEvt)
                     $refs.confirmModal.remove()
                 })
